--- a/templates/franchise.html
+++ b/templates/franchise.html
@@ -5,24 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Francise</title>
 
-    <meta name="Title" content="지유가오카 - FRANCHISE - 창업경쟁력" />
+    <meta name="Title" content= Debon - FRANCHISE - 창업경쟁력" />
     <meta name="Subject" content="창업경쟁력" />
-    <meta name="Author" content="지유가오카" />
-    <meta
-      name="Keywords"
-      content="지유가오카,지유가오카브레드,수제케이크,프리미엄베이커리"
-    />
-    <meta
-      name="Description"
-      content="지유가오카브레드, 맛과 프리미엄의 대중화.  자체 R&amp;D연구소, 케익 특허, 벤처기업 인증."
-    />
+    <meta name="Author" content= Debon" /> <meta name="Keywords" content=
+    Debon브레드,수제케이크,프리미엄베이커리" /> <meta name="Description"
+    content= Debon브레드, 맛과 프리미엄의 대중화. 자체 R&amp;D연구소, 케익 특허,
+    벤처기업 인증." />
     <meta name="Robots" content="INDEX,FOLLOW" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="지유가오카 - FRANCHISE - 창업경쟁력" />
-    <meta
-      property="og:description"
-      content="지유가오카브레드, 맛과 프리미엄의 대중화.  자체 R&amp;D연구소, 케익 특허, 벤처기업 인증."
-    />
+    <meta property="og:title" content= Debon - FRANCHISE - 창업경쟁력" /> <meta
+    property="og:description" content= Debon브레드, 맛과 프리미엄의 대중화. 자체
+    R&amp;D연구소, 케익 특허, 벤처기업 인증." />
     <meta
       property="og:image"
       content="http://jiyugaoka.co.kr/images/common/logo.png"
@@ -32,11 +25,9 @@
       content="http://jiyugaoka.co.kr/kr/franchise/startup.php"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="지유가오카 - FRANCHISE - 창업경쟁력" />
-    <meta
-      name="twitter:description"
-      content="지유가오카브레드, 맛과 프리미엄의 대중화.  자체 R&amp;D연구소, 케익 특허, 벤처기업 인증."
-    />
+    <meta name="twitter:title" content= Debon - FRANCHISE - 창업경쟁력" /> <meta
+    name="twitter:description" content= Debon브레드, 맛과 프리미엄의 대중화.
+    자체 R&amp;D연구소, 케익 특허, 벤처기업 인증." />
     <meta
       name="twitter:image"
       content="http://jiyugaoka.co.kr/images/common/logo.png"
@@ -153,366 +144,12 @@
   </head>
 
   <body>
-    <!--[if lt IE 7]>
-      <p class="cm-alert-ie">
-        현재 웹브라우저에서는 사이트가 정상적으로 표시되지 않을 수 있습니다.
-        <strong
-          ><a href="http://browsehappy.com/" target="_blank"
-            >여기를 클릭</a
-          ></strong
-        >하여 웹브라우저를 업그레이드 하세요.
-      </p>
-    <![endif]-->
-    <!-- accessibility -->
     <div class="cm-accessibility">
       <a href="#container">본문바로가기</a>
     </div>
-    <!-- //accessibility -->
 
     <!-- code -->
     <div id="wrap">
-      <!-- header -->
-
-      <!-- header가 fixed가 아닌경우는 클래스 fixed-header 삭제해주세요 -->
-      <header id="header" class="fixed-header">
-        <div class="gnb-overlay-bg"></div>
-        <div id="headerInnerWrap">
-          <!-- ****************** 헤더상단 ********************** -->
-          <div id="headerInner" class="clearfix">
-            <h1 class="logo">
-              <a href="http://jiyugaoka.co.kr/kr/" title="메인으로"
-                ><img
-                  src="http://jiyugaoka.co.kr/images/common/logo.png"
-                  alt="지유가오카"
-              /></a>
-            </h1>
-            <div class="header-util-box">
-              <!-- 사이트맵 버튼 ( 기본 라인 三 ) -->
-              <button
-                onclick="javascript:layerLoad('http://jiyugaoka.co.kr/kr/service/sitemap.php'); return false;"
-                class="sitemap-line-btn sitemap-open-btn"
-                title="사이트맵 열기"
-              >
-                <span class="line line1"></span><span class="line line2"></span
-                ><span class="line line3"></span>
-              </button>
-              <!-- 사이트맵 버튼 2 ( 커스텀 버튼 ) -->
-              <!-- <button  onclick="javascript:layerLoad('http://jiyugaoka.co.kr/kr/service/sitemap.php'); return false;" class="sitemap-custom-btn sitemap-open-btn" title="사이트맵 열기">
-						<i class="material-icons">&#xE8DE;</i>
-					</button> -->
-            </div>
-          </div>
-          <!-- ****************** GNB ********************** -->
-          <!-- GNB PC ( ### 메뉴 4개이하 ### ) -->
-          <nav id="gnb" class="each-menu">
-            <h2 class="blind">주메뉴</h2>
-            <!-- 
-					- 전체메뉴 : class="total-menu"
-					- 각각메뉴 : class="each-menu" + <div id="gnbBg"></div> 삭제
-				-->
-            <div id="gnbBg"></div>
-            <ul class="clearfix">
-              <li>
-                <a
-                  href="http://jiyugaoka.co.kr/kr/brand/story.php"
-                  class="font-volk"
-                  >BRAND</a
-                >
-                <div class="gnb-2dep">
-                  <ul>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/brand/story.php"
-                        >브랜드스토리</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/brand/competit.php"
-                        >브랜드경쟁력</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/brand/cooper.php"
-                        >협력사</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/brand/greeting.php"
-                        >본사소개</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/brand/location.php"
-                        >찾아오시는 길</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a
-                  href="http://jiyugaoka.co.kr/kr/menu/menu.php"
-                  class="font-volk"
-                  >MENU</a
-                >
-                <div class="gnb-2dep">
-                  <ul class="menu-move">
-                    <li>
-                      <a
-                        href="http://jiyugaoka.co.kr/kr/menu/menu.php#cake"
-                        data-target="#cake"
-                        >케이크</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="http://jiyugaoka.co.kr/kr/menu/menu.php#bread"
-                        data-target="#bread"
-                        >브레드</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="http://jiyugaoka.co.kr/kr/menu/menu.php#drinks"
-                        data-target="#drinks"
-                        >음료</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="http://jiyugaoka.co.kr/kr/menu/menu.php#dessert"
-                        data-target="#dessert"
-                        >디저트</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a
-                  href="http://jiyugaoka.co.kr/kr/store/store.php"
-                  class="font-volk"
-                  >STORE</a
-                >
-                <div class="gnb-2dep">
-                  <ul>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/store/store.php"
-                        >지역별 매장정보</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a
-                  href="http://jiyugaoka.co.kr/kr/franchise/startup.php"
-                  class="font-volk"
-                  >FRANCHISE</a
-                >
-                <div class="gnb-2dep">
-                  <ul>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/startup.php"
-                        >창업경쟁력</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/process.php"
-                        >개설절차</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/profit.php"
-                        >수익성분석</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/interior.php"
-                        >인테리어</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/online.php"
-                        >창업상담</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/franchise/owner.php"
-                        >점주공간</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a
-                  href="http://jiyugaoka.co.kr/kr/news/broad.php"
-                  class="font-volk"
-                  >NEWS</a
-                >
-                <div class="gnb-2dep">
-                  <ul>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/news/broad.php"
-                        >언론보도</a
-                      >
-                    </li>
-                    <li>
-                      <a href="http://jiyugaoka.co.kr/kr/news/notice.php"
-                        >공지사항</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-
-              <li style="cursor: pointer">
-                <a
-                  onclick="javascript:layerLoad('http://jiyugaoka.co.kr/kr/service/video.php'); return false;"
-                  title="광고영상 열기"
-                >
-                  <img src="/images/button/menu_video.png" />
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!-- GNB Mobile -->
-        <button class="nav-open-btn" title="네비게이션 열기">
-          <span class="line line1"></span><span class="line line2"></span
-          ><span class="line line3"></span>
-        </button>
-        <div class="gnb-overlay-bg-m"></div>
-        <nav id="gnbM">
-          <h2 class="blind">주메뉴</h2>
-          <ul id="navigation">
-            <li>
-              <a href="javascript:;" class="font-volk">BRAND</a>
-              <ul class="gnb-2dep">
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/brand/story.php"
-                    >브랜드스토리</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/brand/competit.php"
-                    >브랜드경쟁력</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/brand/cooper.php"
-                    >협력사</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/brand/greeting.php"
-                    >본사소개</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/brand/location.php"
-                    >찾아오시는 길</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:;" class="font-volk">MENU</a>
-              <ul class="gnb-2dep">
-                <li>
-                  <a
-                    href="http://jiyugaoka.co.kr/kr/menu/menu.php#cake"
-                    data-target="#cake"
-                    >케이크</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://jiyugaoka.co.kr/kr/menu/menu.php#bread"
-                    data-target="#bread"
-                    >브레드</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://jiyugaoka.co.kr/kr/menu/menu.php#drinks"
-                    data-target="#drinks"
-                    >음료</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="http://jiyugaoka.co.kr/kr/menu/menu.php#dessert"
-                    data-target="#dessert"
-                    >디저트</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:;" class="font-volk">STORE</a>
-              <ul class="gnb-2dep">
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/store/store.php"
-                    >지역별 매장정보</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:;" class="font-volk">FRANCHISE</a>
-              <ul class="gnb-2dep">
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/startup.php"
-                    >창업경쟁력</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/process.php"
-                    >개설절차</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/profit.php"
-                    >수익성분석</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/interior.php"
-                    >인테리어</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/online.php"
-                    >창업상담</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/franchise/owner.php"
-                    >점주공간</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:;" class="font-volk">NEWS</a>
-              <ul class="gnb-2dep">
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/news/broad.php"
-                    >언론보도</a
-                  >
-                </li>
-                <li>
-                  <a href="http://jiyugaoka.co.kr/kr/news/notice.php"
-                    >공지사항</a
-                  >
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <!-- //header -->
       <!-- container -->
       <div id="container">
         <!-- visual -->
@@ -528,18 +165,12 @@
           <div class="area visual-txt-con">
             <h2 class="visual-tit trans400 font-volk">FRANCHISE</h2>
             <p class="visual-sub-txt" style="transition-delay: 0.5s">
-              지유가오카의 프랜차이즈 개설절차 및 창업상담 등을 안내해드립니다
+              Debon의 프랜차이즈 개설절차 및 창업상담 등을 안내해드립니다
             </p>
           </div>
 
           <aside class="trans300 pc-submenu-wrap">
             <div id="pcSubMenu" class="trans300">
-              <a
-                href="http://jiyugaoka.co.kr/kr/"
-                class="home-btn"
-                title="메인으로"
-                ><i class="material-icons">&#xE88A;</i></a
-              >
               <div class="pc-sub-menu snb">
                 <ul class="clearfix">
                   <li>
@@ -547,29 +178,10 @@
                       >창업경쟁력</a
                     >
                   </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/process.php"
-                      >개설절차</a
-                    >
-                  </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/profit.php"
-                      >수익성분석</a
-                    >
-                  </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/interior.php"
-                      >인테리어</a
-                    >
-                  </li>
+
                   <li>
                     <a href="http://jiyugaoka.co.kr/kr/franchise/online.php"
                       >창업상담</a
-                    >
-                  </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/owner.php"
-                      >점주공간</a
                     >
                   </li>
                 </ul>
@@ -632,21 +244,7 @@
                       >창업경쟁력</a
                     >
                   </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/process.php"
-                      >개설절차</a
-                    >
-                  </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/profit.php"
-                      >수익성분석</a
-                    >
-                  </li>
-                  <li>
-                    <a href="http://jiyugaoka.co.kr/kr/franchise/interior.php"
-                      >인테리어</a
-                    >
-                  </li>
+
                   <li>
                     <a href="http://jiyugaoka.co.kr/kr/franchise/online.php"
                       >창업상담</a
@@ -721,7 +319,7 @@
                     <h3>글로벌 기업 제휴</h3>
                   </div>
                   <p>
-                    지유가오카는 본사의 독보적인 기술력과<br />
+                    Debon는 본사의 독보적인 기술력과<br />
                     별화된 경쟁력을 인정받아 유수의 글로벌 기업과<br />
                     제휴된 신뢰할 수 있는 회사입니다.
                   </p>
@@ -746,8 +344,8 @@
                   </div>
                   <p>
                     경쟁력 낮은 제품을 저가에 납품 받아 판매하는<br />일반
-                    프랜차이즈와 달리 지유가오카는 자체 생산라인과<br />유통망,
-                    교육 시스템을 갖추고 있는 디저트&베이커리 본사입니다.
+                    프랜차이즈와 달리 Debon은 자체 생산라인과<br />유통망, 교육
+                    시스템을 갖추고 있는 디저트&베이커리 본사입니다.
                   </p>
                 </div>
               </div>
@@ -768,11 +366,11 @@
                     (직영점으로 테스트 완료)
                   </p>
                   <p class="line-txt">
-                    동종업종에서 우위에 설 수 있는 지유가오카만의 차별화된
-                    경쟁력 확보 (글로벌기업 인증)
+                    동종업종에서 우위에 설 수 있는 Debon만의 차별화된 경쟁력
+                    확보 (글로벌기업 인증)
                   </p>
                   <p class="line-txt">
-                    2010년 오픈한 지유가오카의 첫 매장이 현재까지 성업, 유행을
+                    2010년 오픈한 Debon의 첫 매장이 현재까지 성업, 유행을
                     타지않는 지속성 연구 (노하우 제공)
                   </p>
                 </div>
@@ -877,7 +475,6 @@
       </article>
 
       <script type="text/javascript">
-        <!--
         var submit2 = false;
         function sendit2() {
           var f = document.online_form;
