로그인, 회원가입 헤더, 푸터 추가

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,25 +3,6 @@
   <head> </head>
   <body>
     <div class="inner">
-<<<<<<< HEAD
-      <nav class="navbar">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">DE BON</a>
-          </div>
-          <div>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">BRAND</a></li>
-              <li><a href="#">MENU</a></li>
-              <li><a href="#">FRANCHISE</a></li>
-              <li><a href="#">ORDER</a></li>
-              <li><a href="#">NEWS</a></li>
-              <li><a href="DessertLogin.html">LOGIN</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-=======
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -31,15 +12,14 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">BRAND</a></li>
                         <li><a href="menu.html">MENU</a></li>
-                        <li><a href="#">FRANCHISE</a></li>
-                        <li><a href="#">ORDER</a></li>
+                        <li><a href="franchise.html">FRANCHISE</a></li>
+                        <li><a href="custom.html">ORDER</a></li>
                         <li><a href="news.html">NEWS</a></li>
                         <li><a href="DessertLogin.html">LOGIN</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
->>>>>>> 07f64fb11e5acee2140d54a931e749d1b71be646
     </div>
   </body>
 </html>
