--- a/templates/DessertLogin.html
+++ b/templates/DessertLogin.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <title>로그인창</title>
     <link rel="stylesheet" href="../static/css/DessertLogin.css" />
+    <link rel="stylesheet" href="../static/css/header.css">
     <link rel="stylesheet" href="../static/css/footer.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+      body {
+        background-color: #f9f8ea;
+      }
+    </style>
   </head>
   <body>
+    <header></header>
     <div class="loginbox">
       <form action="#">
         <!--그룹을 만들 수 있다. -->
@@ -34,7 +47,7 @@
           <li><a href="#">아이디찾기</a></li>
           <li><a href="#">비밀번호찾기</a></li>
         </ul>
-        <button id="LoginClick" type="submit" onclick="loginchecking();">
+        <button id="LoginClick" type="submit" onclick="loginchecking(); return false;">
           로그인
         </button>
 
@@ -53,8 +66,11 @@
         </div>
       </form>
     </div>
+    <section id="page-start"></section>
     <footer></footer>
+
     <script src="../static/js/login.js"></script>
+    <script src="../static/js/header.js"></script>
     <script src="../static/js/footer.js"></script>
   </body>
 </html>
