--- a/templates/DessertSignup.html
+++ b/templates/DessertSignup.html
@@ -5,96 +5,74 @@
     <title>회원가입창</title>
     <link rel="stylesheet" href="../static/css/DessertSignup.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" />  
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>  
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
+
+<!--    여기부터 헤더를 위한 코드-->
+    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="../static/css/footer.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+      body {
+        background-color: #f9f8ea;
+      }
+    </style>
   </head>
   <body>
-      <div class="loginbox">
+    <header></header>
+    <div class="loginbox">
       <form id="loginForm">
         <!--그룹을 만들 수 있다. -->
         <div>
           <h2 style="text-align:center;">Signup</h2>
           <br /><br />
           <label for="id">아이디</label>
-          <input
-            type="text"
-            id="loginid"
-            placeholder="아이디 (E-mail)을 입력해 주세요"
-            required
-            autofocus
-            maxlength=15
-          />
-          <label for="pswd1">비밀번호</label>
-          <input
-            type="password"
-            id="loginpw"
-            placeholder="비밀번호를 입력해 주세요"
-            required
-            maxlength=20
+          <input type="text"
+              id="loginid"
+              placeholder="아이디 (E-mail)을 입력해 주세요"
+              required
+              autofocus
+              maxlength=15
             />
+          <label for="pswd1">비밀번호</label>
+          <input type="password"
+              id="loginpw"
+              placeholder="비밀번호를 입력해 주세요"
+              required
+              maxlength=20
+              />
           <label for="pswd2">비밀번호 재확인</label>
           <input
-            type="password"
-            id="loginpw"
-            placeholder="비밀번호를 입력해 주세요"
-            required
-            maxlength=20
-            />
+              type="password"
+              id="loginpw"
+              placeholder="비밀번호를 입력해 주세요"
+              required
+              maxlength=20
+              />
           <label for="name">이름</label>
-          <input 
-          type="text" id="name" class="int" maxlength="20" 
-          placeholder="이름을 입력해 주세요"
-          required
-          />
+          <input
+            type="text" id="name" class="int" maxlength="20"
+            placeholder="이름을 입력해 주세요"
+            required
+            />
           <label for="yy">생년월일</label>
           <input type="text" id="Date">
-            <!-- BIRTH_YY -->
-            <!-- <div id="bir_yy">
-                <input
-                  type="text"
-                  id="yy"
-                  class="int"
-                  maxlength="4"
-                  placeholder="년(4자)"
-                  required
-                />
-            </div> -->
 
-            <!-- BIRTH_MM -->
-            <!-- <div id="bir_mm">
-                <select id="mm" class="sel">
-                  <option>월</option>
-                  <option value="01">1</option>
-                  <option value="02">2</option>
-                  <option value="03">3</option>
-                  <option value="04">4</option>
-                  <option value="05">5</option>
-                  <option value="06">6</option>
-                  <option value="07">7</option>
-                  <option value="08">8</option>
-                  <option value="09">9</option>
-                  <option value="10">10</option>
-                  <option value="11">11</option>
-                  <option value="12">12</option>
-                </select>
-            </div> -->
-            <!-- BIRTH_DD -->
-            <!-- <div id="bir_dd">
-                <input
-                  type="text"
-                  id="dd"
-                  class="int"
-                  maxlength="2"
-                  placeholder="일"
-                  required
-                />
-            </div> -->
-          </div>
           <button id="LoginClick" type="submit">확인</button>
         </div>
-        </div>   
       </form>
-    </div> 
+    </div>
+
+<!--    이것도 헤더를 위한 코드-->
+    <section id="page-start"></section>
+    <footer></footer>
+
     <script src="../static/js/SignUp.js"></script>
+    <script src="../static/js/header.js"></script>
+    <script src="../static/js/footer.js"></script>
   </body>
 </html>
