--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
                 </div>
                 <div>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">BRAND</a></li>
+                        <li><a href="brand.html">BRAND</a></li>
                         <li><a href="menu.html">MENU</a></li>
                         <li><a href="franchise.html">FRANCHISE</a></li>
                         <li><a href="custom.html">ORDER</a></li>
