--- a/templates/menu.html
+++ b/templates/menu.html
@@ -17,6 +17,10 @@
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <!-- AOS 라이브러리 불러오기-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
     <header></header>
@@ -25,7 +29,7 @@
         <div class="wrap">
             <div class="title">
                 <h1>DESSERT MENU</h1>
-                <p>찾으시는 메뉴를 클릭해서 확인해보세요.</p>
+                <p>Please click on the menu you are looking for to confirm.</p>
             </div>
             <div class="img_wrap">
                 <img class="scale" src="../static/src/menu_img.jpg" alt="배경사진"/>
@@ -53,9 +57,10 @@
                     <img src="../static/src/cake.jpg" alt="케이크 배너">
                     <div class="box">
                         <h1>CAKE</h1>
-                        <p>디저트의 본 고장에서 전수받은 기술력과, <br>
-                            일류호텔 출신 셰프들의 오랜 연구와 노하우로 <br>
-                            만드는 수제 케이크입니다.</p>
+                        <p>The technology that was taught at home for dessert, <br>
+                            Thanks to the long-standing research and know-how  <br>
+                            of chefs from leading hotels,
+                            It's a handmade cake. <br></p>
                     </div>
                 </div>
             </div>
@@ -184,11 +189,11 @@
                     <img src="../static/src/tart.jpg" alt="케이크 배너">
                     <div class="box2">
                         <h1>TART</h1>
-                        <p>드본만의 노하우로 방부제, 화학첨가물 없이 매일매일 <br>
-                            엄선한 재료로 만들고 있습니다. <br>
-                            일반적인 공법 대신 드본만의 레시피와 <br>
-                            천연 유산균 생지를 사용하여 더욱 부드럽고 건강한 <br>
-                            타르트를 생산하고 있습니다.</p>
+                        <p>With Debon's unique know-how, we do it every day without preservatives or chemical additives.<br>
+                            It is made from carefully selected ingredients.<br>
+                            Instead of using the conventional method, DeBong's unique recipe,
+                            It uses natural lactic acid bacteria to make it softer and healthier.
+                            We produce tart.</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +205,7 @@
                             <figcaption>
                                 <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
                                 <div class="heading">
-                                    <h2>사과<span> 타르트</span></h2>
+                                    <h2>Apple<span> Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -303,5 +308,6 @@
     <script src="../static/js/header.js"></script>
     <script src="../static/js/menu.js"></script>
     <script src="../static/js/footer.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
