--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -26,7 +26,7 @@
       <div class="title">
         <p class="top">PREMIUM CAKE & TARTE</p>
         <h1 class="debon">DE BON</h1>
-        <h3>고품격 디저트 카페 드봉</h3>
+        <h3>High quality dessert cafe Debon</h3>
       </div>
       <section class="img_wrap">
         <div class="cycle-slideshow">
@@ -48,8 +48,8 @@
           <h1>DE BON</h1>
           <hr />
           <p>
-            드봉은 내가 먹고, 부모님이 드신다는 마음으로<br />
-            정성을 다해 디저트를 만드는 수제디저트 전문점입니다.
+            I'm going to eat it and my parents will eat it.<br />
+            It's a handmade dessert shop where you make desserts with all your heart.
           </p>
           <input type="button" value="more" />
         </div>
@@ -108,8 +108,8 @@
               <div id="map"></div>
             </div>
             <div class="col-sm-7 col-2">
-              <h1>문의하기</h1>
-              <h3>고객의 소리에 귀 기울이는 드봉이 되겠습니다.</h3>
+              <h1>Contact Us</h1>
+              <h3>It's Debon who listens to customers.</h3>
               <form class="form-inline">
                 <div class="row">
                   <div class="col-sm-6">
@@ -158,7 +158,7 @@
     <script src="../static/js/footer.js"></script>
     <script
       class="script_api"
-      src="https://maps.googleapis.com/maps/api/js?key={YOUR_KEY}&callback=myMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgzOCwqS88xhlO2-TjIyeeBdvbxroh70&callback=myMap"
     ></script>
   </body>
 </html>
