--- a/templates/DessertSignup.html
+++ b/templates/DessertSignup.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8" />
     <title>회원가입창</title>
     <link rel="stylesheet" href="../static/css/DessertSignup.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" />  
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css"
+      type="text/css"
+    />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
 
-<!--    여기부터 헤더를 위한 코드-->
-    <link rel="stylesheet" href="../static/css/header.css">
+    <!--    여기부터 헤더를 위한 코드-->
+    <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/footer.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
@@ -28,46 +38,51 @@
       <form id="loginForm">
         <!--그룹을 만들 수 있다. -->
         <div>
-          <h2 style="text-align:center;">Signup</h2>
+          <h2 style="text-align: center">Signup</h2>
           <br /><br />
           <label for="id">아이디</label>
-          <input type="text"
-              id="loginid"
-              placeholder="아이디 (E-mail)을 입력해 주세요"
-              required
-              autofocus
-              maxlength=15
-            />
+          <input
+            type="text"
+            id="loginid"
+            placeholder="아이디 (E-mail)을 입력해 주세요"
+            required
+            autofocus
+            maxlength="15"
+          />
           <label for="pswd1">비밀번호</label>
-          <input type="password"
-              id="loginpw"
-              placeholder="비밀번호를 입력해 주세요"
-              required
-              maxlength=20
-              />
+          <input
+            type="password"
+            id="loginpw"
+            placeholder="비밀번호를 입력해 주세요"
+            required
+            maxlength="20"
+          />
           <label for="pswd2">비밀번호 재확인</label>
           <input
-              type="password"
-              id="loginpw"
-              placeholder="비밀번호를 입력해 주세요"
-              required
-              maxlength=20
-              />
+            type="password"
+            id="loginpw"
+            placeholder="비밀번호를 입력해 주세요"
+            required
+            maxlength="20"
+          />
           <label for="name">이름</label>
           <input
-            type="text" id="name" class="int" maxlength="20"
+            type="text"
+            id="name"
+            class="int"
+            maxlength="20"
             placeholder="이름을 입력해 주세요"
             required
-            />
+          />
           <label for="yy">생년월일</label>
-          <input type="text" id="Date">
+          <input type="text" id="Date" />
 
           <button id="LoginClick" type="submit">확인</button>
         </div>
       </form>
     </div>
 
-<!--    이것도 헤더를 위한 코드-->
+    <!--    이것도 헤더를 위한 코드-->
     <section id="page-start"></section>
     <footer></footer>
 
