뉴스 페이지 영어로 수정

--- a/templates/news.html
+++ b/templates/news.html
@@ -22,7 +22,7 @@
     <div class="bg"></div>
     <div class="title">
         <h2 class>NEWS</h2>
-        <p>드봉의 공지사항을 안내해드립니다.</p>
+        <p>Here's the announcement of DE BON.</p>
     </div>
     <div class="img_wrap">
         <img src="../static/src/news.jpg" id="image" alt="배경">
@@ -31,31 +31,31 @@
     <div id="container">
         <div id="Sub-header">
             <a href="./mainPage.html" class="home-btn"><i class="home-icon">🏚</i></a>
-            <li class="on"><a href="#">공지사항</a></li>
+            <li class="on"><a href="#">NEWS</a></li>
         </div>
     </div>
     <section id="page-start">
         <div class="notice">
             <ul class="rolling">
-                <li><a href="#">공지사항 게시판이 오픈하였습니다.</a></li>
-                <li><a href="#">주문 오류 관련 사항 안내</a></li>
+                <li><a href="#">The news board has opened.</a></li>
+                <li><a href="#">Announcement related to order error</a></li>
             </ul>
         </div>
         <div id="middleArea">
             <!-- middleArea --><!-- 상단정보 (센터정렬) -->
 			<aside id="contentNews" class="content_css">
-				<h3 class="content">공지사항</h3>
+				<h3 class="content">NEWS</h3>
 			</aside>
 
             <table>
                 <tr>
-                    <th>번호</th><th>제목</th> <th>작성자</th><th>등록일</th><th>조회수</th>
+                    <th>NO.</th><th>Title</th> <th>Writer</th><th>Date</th><th>Views</th>
                 </tr>
                 <tr class="data" onclick='count(0)' onmouseover="mOver(this)" onmouseout="mOut(this)">
-                    <td>2</td><td><a href="#contentNews">주문 오류 관련 사항 안내</a></td><td>관리자</td><td>2022.05.29</td><td class="result">10</td>
+                    <td>2</td><td><a href="#contentNews">Announcement related to order error</a></td><td>Manager</td><td>2022.05.29</td><td class="result">0</td>
                 </tr>
                 <tr class="data" onclick='count(1)' onmouseover="mOver(this)" onmouseout="mOut(this)">
-                    <td>1</td><td><a href="#contentNews">공지사항 게시판이 오픈하였습니다.</a></td><td>관리자</td><td>2022.05.29</td><td class="result">10</td>
+                    <td>1</td><td><a href="#contentNews">The news board has opened.</a></td><td>Manager</td><td>2022.05.29</td><td class="result">0</td>
                 </tr>
             </table>
         </div>
